--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,61 @@
 {
-  "name": "ai-artwork-guesser-game",
+  "name": "router-tutorial",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "address": "^1.2.2",
+    "ansi-styles": "^6.2.1",
+    "antd": "^5.4.5",
+    "axios": "^1.4.0",
+    "copy-to-clipboard": "^3.3.3",
+    "crypto-browserify": "^3.12.0",
+    "history": "^5.3.0",
+    "http": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
+    "i": "^0.3.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "un": "^0.0.0",
+    "web-vitals": "^2.1.4"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "main": "index.js",
+  "repository": "https://github.com/liuliufashi/demo.git",
+  "author": "liuliufashi <lx19140000803@163.com>",
+  "license": "MIT",
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.2.0"
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2"
   }
 }
