--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.39.0",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "prettier": "^2.8.8"
   }
 }
