--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "antd": "^5.4.6",
     "eslint": "^8.39.0",
     "prettier": "^2.8.8",
