--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node -r esm ./src/index.js",
+    "start": "nodemon -r esm ./src/index.js",
     "server": "npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +19,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "prettier": "^2.8.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
