--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.39.0",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
+    "openai": "^3.2.1",
     "prettier": "^2.8.8"
   },
   "devDependencies": {
