--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
     "antd": "^5.4.6",
+    "axios": "^1.4.0",
     "eslint": "^8.39.0",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
