--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "openai": "^3.2.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
