--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@mui/material": "^5.12.3",
     "antd": "^5.4.6",
     "axios": "^0.27.2",
-
+    "dotenv": "^16.0.3",
     "eslint": "^8.39.0",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
