--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
-    "@testing-library/react": "^14.0.0",
     "antd": "^5.4.6",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.3",
-
     "eslint": "^8.39.0",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
@@ -31,11 +28,17 @@
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "axios-mock-adapter": "^1.21.4",
+    "dotenv": "^16.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "vite": "^4.3.5"
+    "jsdom": "^22.0.0",
+    "vite": "^4.3.5",
+    "vitest": "^0.31.0"
   }
 }
